force-app/main/driver-assistant/objects/Stop__c/fields/Actual_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival_Time__c</fullName>
    <label>Actual Arrival Time</label>
    <type>DateTime</type>
</CustomField>