force-app/main/driver-assistant/objects/Stop__c/fields/Expected_Arrival_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_End_Time__c</fullName>
    <label>Expected Arrival End Time</label>
    <type>DateTime</type>
</CustomField>