force-app/main/driver-assistant/objects/Stop__c/fields/Expected_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Departure_Time__c</fullName>
    <label>Expected Departure Time</label>
    <type>DateTime</type>
</CustomField>