force-app/main/driver-assistant/objects/Stop__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Stops</relationshipLabel>
    <relationshipName>Stops</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>