force-app/main/driver-assistant/objects/Stop__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Stops</relationshipLabel>
    <relationshipName>Stops</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>